testsuite/tests/typing-layouts/parsing_alpha.compilers.reference
type 'a t0 = 'a list
type ('a : immediate) t0 = 'a list
type ('a : void) t0 = 'a list
Line 2, characters 11-15:
2 | type ('a : valu) t0 = 'a list;;
               ^^^^
Error: Unbound kind "valu"
Hint: Did you mean "value"?
type t = float#
type t = int#
type t = Float.t#
type ('a : any, 'b : any, 'c : any) t
type ('a : float64) s1 = ('a, int, bool) t
val f : ('a : any) 'b. ('a, 'b, bool) t -> int = <fun>
type ('a, 'b, 'c : bits32) s2 = ('a, 'b, 'c) t

